--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Build Project
         run: npm run build
 
+      - name: Copy .htaccess to dist
+        run: cp public/.htaccess dist/.htaccess
+
       - name: Deploy to Deploy Branch
         uses: JamesIves/github-pages-deploy-action@v4
         with:
